# Data-Acqusition-Research-Direction-Prototypes

./: .gitignore  AGENTS.md  adult_prototype_fitted_q_learning.py  miniboone_batch_size_auc.py  miniboone_prototype.py  mnist_mlp_active_learning.py  pyproject.toml
artifacts/: test_policy.joblib
docs/formulation/: research_formulation.tex
docs/reflections/: q_learning_prototype_learnings.md
notebooks/: adult_fitted_q_learning_py.py  deploy_saved_q_logistic_regression.ipynb  deploy_saved_q_mnist_mlp_py.py  run_saved_policy_episode.ipynb
